feat: add starship prompt configuration to Zsh setup and include in Brewfile

--- a/configurations/brew/Brewfile
+++ b/configurations/brew/Brewfile
@@ -7,3 +7,4 @@ brew "zsh-syntax-highlighting" # Zsh syntax highlighting
 brew "fzf" # Fuzzy finder
 brew "ripgrep" # Search tool
 brew "jq" # JSON processor
+brew "starship" # Starship prompt
